Fix input jumps on errors

--- a/src/containers/MarketPage/marketPage.module.scss
+++ b/src/containers/MarketPage/marketPage.module.scss
@@ -10,5 +10,5 @@
 }
 
 .transaction {
-  height: 450px;
+  height: 470px;
 }
