--- a/src/containers/Transaction/transaction.module.scss
+++ b/src/containers/Transaction/transaction.module.scss
@@ -12,9 +12,8 @@
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .buttonContainer {
